// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Confirmation Modal > should render with custom title and description 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-lg"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg text-theme-text"
            >
              My Title
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <svg
              class="m-auto my-8 w-3/5"
              fill="none"
              height="163"
              viewBox="0 0 303 163"
              width="303"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_8144_152326)"
              >
                <path
                  d="M122.219 55.996L174.67 4.62a10 10 0 0 1 14.142 0l60.148 60.148a10.001 10.001 0 0 1 0 14.142l-60.148 60.149a9.999 9.999 0 0 1-14.142 0l-35.451-35.063c-3.905-3.9 1.095-8.9 5-5l30.319 29.35a9.997 9.997 0 0 0 14.142 0l49.569-49.569a10.002 10.002 0 0 0 0-14.142L188.68 15.066a10.001 10.001 0 0 0-14.142 0l-50.569 49.57-1.75-8.64z"
                  stroke="#DF5E4C"
                  stroke-width="2"
                />
                <path
                  d="M72.274 124.997h-4.055a6.002 6.002 0 0 0-6 6v5a6 6 0 0 0 6 6h78a6 6 0 0 0 6-6v-5a6 6 0 0 0-6-6H82.245c-4.95 0-5.656-2.919-4.626-7.229 1.03-4.31 15.3-56.956 17.6-66.77 3.659-15.585 23.048-14.65 26 1 2.952 15.65 16 66.999 16 66.999"
                  stroke="#212225"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M126.219 107.998h-38a2.192 2.192 0 0 1-1.794-.971 2.18 2.18 0 0 1-.206-2.029c.559-1.861 1.784-6.09 2-7a2.91 2.91 0 0 1 3-2h33c1.318 0 1.856 1.547 2 2 .255.8 1.664 5.386 2 7 .336 1.614-.214 3-2 3zm-7-28h-23a2.18 2.18 0 0 1-2-3c.559-1.861 1.784-6.09 2-7a2.91 2.91 0 0 1 3-2h18c1.318 0 1.856 1.547 2 2a67.45 67.45 0 0 1 2 7c.189 1.59-.214 3-2 3z"
                  stroke="#DDE0E6"
                  stroke-width="2"
                />
                <path
                  d="M274.219 162.383v-19h-38v19h-2v-19h-28v-2h28v-16h2v16h38v-39h-4v-2h4v-38h-4v-2h4v-23h2v23h6v2h-6v38h26v2h-26v39h26v2h-26v19h-2zm-19-56v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zm19-79v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zM28 17.383v19h38v-19h2v19h17v2H68v39h-2v-39H28v39h4v2h-4v38h4v2h-4v23h-2v-23h-6v-2h6v-38H0v-2h26v-39H0v-2h26v-19h2zm19 56v4h4v2h-4v4h-2v-4h-4v-2h4v-4h2zm-19 79v4h4v2h-4v4h-2v-4h-4v-2h4v-4h2z"
                  fill="#DBDEE5"
                />
                <path
                  d="M116.102 141.996h48.266m-123.266 0h48.266"
                  stroke="#212225"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M189.219 47.816a8 8 0 0 0-16 0v24a8 8 0 0 0 16 0v-24z"
                  fill="#FFE7E2"
                />
                <path
                  d="M188.219 47.816a7 7 0 1 0-14 0v24a7 7 0 1 0 14 0v-24z"
                  stroke="#DF5E4C"
                  stroke-width="2"
                />
                <path
                  d="M189.219 91.816a8 8 0 1 0-16 0 8 8 0 0 0 16 0z"
                  fill="#FFE7E2"
                />
                <path
                  d="M188.219 91.816a7 7 0 1 0-14 0 7 7 0 0 0 14 0z"
                  stroke="#DF5E4C"
                  stroke-width="2"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_8144_152326"
                >
                  <path
                    d="M0 0h302.219v161.693H0z"
                    fill="#fff"
                    transform="translate(0 .691)"
                  />
                </clippath>
              </defs>
            </svg>
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              My Description
            </div>
            <div
              data-testid="ConfirmationModal"
            >
              <div
                class="[.modal-footer_&]:mt-4 [.modal-footer_&]:border-none [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 [.modal-footer_&]:sm:pt-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:pt-6 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                  data-testid="ConfirmationModal__no-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    No
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-600"
                  data-testid="ConfirmationModal__yes-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <span>
                      Yes
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirmation Modal > should render with default title and description 1`] = `
<div>
  <div
    class="custom-scroll overflow-overlay fixed inset-0 z-[51] flex w-full overflow-y-hidden bg-theme-secondary-900/40 dark:bg-theme-dark-950/80 dim:bg-theme-dim-950/80 backdrop-blur-xl md:py-20"
    data-testid="Modal__overlay"
  >
    <div
      class="max-w-full flex-1 md:m-auto md:px-10 md:max-w-lg"
      tabindex="-1"
    >
      <div
        class="bg-theme-background dark:border-theme-dark-700 dim:border dim:border-theme-dim-800 relative flex min-h-full flex-col overflow-hidden shadow-2xl sm:mb-0 md:h-auto md:rounded-xl dark:border"
        data-testid="Modal__inner"
      >
        <div
          class="text-theme-secondary-700 hover:text-theme-navy-700 hover:bg-theme-navy-200 dark:text-theme-secondary-200 dark:hover:text-theme-dark-50 dark:hover:bg-theme-dark-700 dim:text-theme-dim-200 dim:hover:text-theme-dim-50 dim:hover:bg-theme-dim-700 absolute top-0 right-0 z-10 mt-3.5 mr-6 rounded transition-all duration-100 ease-linear md:mt-3.5 md:mr-6"
        >
          <button
            class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none h-5 w-5"
            data-testid="Modal__close-button"
            type="button"
          >
            <div
              class="flex items-center gap-2"
            >
              <div>
                <div
                  style="height: 16px; width: 16px;"
                >
                  <svg
                    id="cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M.954 18.981l18-18M18.954 18.981l-18-18"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </button>
        </div>
        <div
          class="relative flex flex-1 flex-col"
        >
          <div
            class="border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 border-b px-6 py-3.5"
          >
            <h2
              class="mb-0 max-w-[calc(100%_-_32px)] text-lg leading-5 font-semibold md:pt-0 md:text-lg text-theme-text"
            >
              Confirmation
            </h2>
          </div>
          <div
            class="flex flex-1 flex-col px-6 pt-4 sm:pb-4"
          >
            <svg
              class="m-auto my-8 w-3/5"
              fill="none"
              height="163"
              viewBox="0 0 303 163"
              width="303"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#clip0_8144_152326)"
              >
                <path
                  d="M122.219 55.996L174.67 4.62a10 10 0 0 1 14.142 0l60.148 60.148a10.001 10.001 0 0 1 0 14.142l-60.148 60.149a9.999 9.999 0 0 1-14.142 0l-35.451-35.063c-3.905-3.9 1.095-8.9 5-5l30.319 29.35a9.997 9.997 0 0 0 14.142 0l49.569-49.569a10.002 10.002 0 0 0 0-14.142L188.68 15.066a10.001 10.001 0 0 0-14.142 0l-50.569 49.57-1.75-8.64z"
                  stroke="#DF5E4C"
                  stroke-width="2"
                />
                <path
                  d="M72.274 124.997h-4.055a6.002 6.002 0 0 0-6 6v5a6 6 0 0 0 6 6h78a6 6 0 0 0 6-6v-5a6 6 0 0 0-6-6H82.245c-4.95 0-5.656-2.919-4.626-7.229 1.03-4.31 15.3-56.956 17.6-66.77 3.659-15.585 23.048-14.65 26 1 2.952 15.65 16 66.999 16 66.999"
                  stroke="#212225"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M126.219 107.998h-38a2.192 2.192 0 0 1-1.794-.971 2.18 2.18 0 0 1-.206-2.029c.559-1.861 1.784-6.09 2-7a2.91 2.91 0 0 1 3-2h33c1.318 0 1.856 1.547 2 2 .255.8 1.664 5.386 2 7 .336 1.614-.214 3-2 3zm-7-28h-23a2.18 2.18 0 0 1-2-3c.559-1.861 1.784-6.09 2-7a2.91 2.91 0 0 1 3-2h18c1.318 0 1.856 1.547 2 2a67.45 67.45 0 0 1 2 7c.189 1.59-.214 3-2 3z"
                  stroke="#DDE0E6"
                  stroke-width="2"
                />
                <path
                  d="M274.219 162.383v-19h-38v19h-2v-19h-28v-2h28v-16h2v16h38v-39h-4v-2h4v-38h-4v-2h4v-23h2v23h6v2h-6v38h26v2h-26v39h26v2h-26v19h-2zm-19-56v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zm19-79v-4h-4v-2h4v-4h2v4h4v2h-4v4h-2zM28 17.383v19h38v-19h2v19h17v2H68v39h-2v-39H28v39h4v2h-4v38h4v2h-4v23h-2v-23h-6v-2h6v-38H0v-2h26v-39H0v-2h26v-19h2zm19 56v4h4v2h-4v4h-2v-4h-4v-2h4v-4h2zm-19 79v4h4v2h-4v4h-2v-4h-4v-2h4v-4h2z"
                  fill="#DBDEE5"
                />
                <path
                  d="M116.102 141.996h48.266m-123.266 0h48.266"
                  stroke="#212225"
                  stroke-linecap="round"
                  stroke-width="2"
                />
                <path
                  d="M189.219 47.816a8 8 0 0 0-16 0v24a8 8 0 0 0 16 0v-24z"
                  fill="#FFE7E2"
                />
                <path
                  d="M188.219 47.816a7 7 0 1 0-14 0v24a7 7 0 1 0 14 0v-24z"
                  stroke="#DF5E4C"
                  stroke-width="2"
                />
                <path
                  d="M189.219 91.816a8 8 0 1 0-16 0 8 8 0 0 0 16 0z"
                  fill="#FFE7E2"
                />
                <path
                  d="M188.219 91.816a7 7 0 1 0-14 0 7 7 0 0 0 14 0z"
                  stroke="#DF5E4C"
                  stroke-width="2"
                />
              </g>
              <defs>
                <clippath
                  id="clip0_8144_152326"
                >
                  <path
                    d="M0 0h302.219v161.693H0z"
                    fill="#fff"
                    transform="translate(0 .691)"
                  />
                </clippath>
              </defs>
            </svg>
            <div
              class="text-theme-secondary-text pr-10 text-sm whitespace-pre-line md:pr-0 md:text-base"
            >
              Are you sure you wish to navigate away from this page without saving?
            </div>
            <div
              data-testid="ConfirmationModal"
            >
              <div
                class="[.modal-footer_&]:mt-4 [.modal-footer_&]:border-none [.modal-footer_&]:px-6 [.modal-footer_&]:sm:px-0 [.modal-footer_&]:sm:pt-0 bg-theme-background dim:bg-theme-dim-950 dark:bg-theme-dark-950 border-theme-secondary-300 dark:border-theme-dark-700 dim:border-theme-dim-700 fixed inset-x-0 bottom-0 flex gap-3 border-t px-8 py-3 sm:relative sm:inset-auto sm:mt-6 sm:justify-end sm:bg-transparent sm:p-0 sm:pt-6 sm:shadow-none sm:dark:bg-transparent sm:dark:shadow-none [&>button]:flex-1 sm:[&>button]:flex-none pb-3 sm:pb-0"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed dark:bg-theme-dark-800 dark:text-theme-dark-50 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-800 hover:text-white dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-900 dim-hover:bg-theme-dim-navy-700 dim-hover:text-white"
                  data-testid="ConfirmationModal__no-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    No
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed text-white bg-theme-primary-600 dark:hover:bg-theme-primary-500 dim:bg-theme-dim-navy-600"
                  data-testid="ConfirmationModal__yes-button"
                  type="button"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <span>
                      Yes
                    </span>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
